removed 3d animation on slide card to avoid overflow

--- a/src/styles/components/NavSlide.scss
+++ b/src/styles/components/NavSlide.scss
@@ -19,7 +19,6 @@
     transition: all 0.6s cubic-bezier(0.5, 0, 0.5, 1);
     max-width: var(--max-width);
     border: 0px solid transparent;
-    overflow-x: hidden; /* 3d transforms overflowing */
     &:has(.NavTrigger--open) {
         // left: calc(var(--max-width) * -1);
         .navSlide__content__card {
