--- a/src/styles/components/Pintabs/PinTabs.scss
+++ b/src/styles/components/Pintabs/PinTabs.scss
@@ -48,13 +48,10 @@
             justify-content: space-between;
             line-height: var(--text-line-height);
             color: var(--color-text-dark);
+            padding: 2rem 0;
             &__figure {
-                --distance: 2rem;
                 border-radius: 1rem;
-                inset: var(--distance) 0;
-                height: calc(100% - 2 * var(--distance));
                 overflow: hidden;
-                border: 1px solid black;
 
                 &:not(.transparent) {
                     background-color: white;
